--- a/WebBTL/Areas/Admin/Views/Roles/Edit.cshtml
+++ b/WebBTL/Areas/Admin/Views/Roles/Edit.cshtml
@@ -42,6 +42,6 @@
     }
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
     </div>
 </div>
