--- a/WebBTL/Views/Shared/_Layout.cshtml
+++ b/WebBTL/Views/Shared/_Layout.cshtml
@@ -9,104 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- MENU1 -->
-    <!--<div class="container-fluid p-1 bgtop1">
-        <div class="container">
-            menu
-        </div>
-    </div>-->
-    <!-- menu  -->
-    <div class="container-fluid bgtop2 p-3">
-        <div class="container">
-            <div class="row ">
-                <div class="col-md-2">
-                    <a class="navbar-brand" href="#"><img src="~/Content/images/logo.png" alt="Bootstrap" width="150">  </a>
-                </div>
-
-                <div class="col-md-8 text-center mt-4">
-                    <nav class="navbar navbar-expand-lg navbar-dark bgmid">
-                        <div class="container-fluid">
-                            <!--<a class="navbar-brand" href="#"><i class="fas fa-home fa-sm"></i> Trang chủ</a>-->
-                            <button class="navbar-toggler border-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item p-lg-3">
-                                        <a class="nav-link active thumuc" aria-current="page" href="#" style="font-size:23px;"><i class="fas fa-home fa-sm" style="color: #FFF;"></i>TRANG CHỦ</a>
-                                    </li>
-                                    <li class="nav-item dropdown p-lg-3">
-                                        <a class="nav-link dropdown-toggle text-black thumuc" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size:23px;">
-                                            SẢN PHẨM
-                                        </a>
-                                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="nav-item p-lg-3">
-                                        <a class="nav-link thumuc text-black" href="#" style="font-size:23px;">GIỚI THIỆU</a>
-                                    </li>
-                                    <li class="nav-item p-lg-3">
-                                        <a class="nav-link thumuc text-black" href="#" style="font-size:23px;">LIÊN HỆ</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-
-                </div>
-
-                <div class="col-md-2 mt-5 ">
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-search" style="color: #FFF;font-size:23px;"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fas fa-user" style="color: #FFF; font-size:23px;"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fas fa-shopping-bag" style="color: #FFF; font-size:23px;"></i></a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- slide banner -->
-
-    <section>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <a href="#" style="display: block; position: relative;"><img src="~/Content/images/slide1.jpg" class="d-block w-100" alt="..." style="width: 100%; height: auto; object-fit: cover; "> </a>
-
-                </div>
-                <div class="carousel-item">
-                    <a href="#"><img src="~/Content/images/slide2.jpg" class="d-block w-100" alt="..." style="width: 100%; height: auto; object-fit: cover; "></a>
-
-
-                </div>
-                <div class="carousel-item">
-                    <a href="#"><img src="~/Content/images/slide3.jpg" class="d-block w-100" alt="..." style="width: 100%; height: auto; object-fit: cover; "></a>
-
-                </div>
-            </div>
-
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev" style=" position: absolute; z-index: 10;">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next" style=" position: absolute; z-index: 10;">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-
-    </section>
+    @RenderSection("navbar", required: false)
+   
 
     <!-- container gioi thieu -->
     @RenderBody();
@@ -122,7 +26,7 @@
 
                 <div class="col-md-4">
                     <a href="#">
-                        <img src="~/Content/images/logoFooter.png" width="352" />
+                        <img src="~/Content/images/logoFooter.png" width="100%" style="max-width:352px;" />
                     </a>
                     <ul class="footerMenuNav">
                         <li style="font-size:20px;margin-bottom:10px;margin-top:10px;"><strong>EONON PRO VIỆT NAM</strong></li>
