--- a/WebBTL/Views/Products/Index.cshtml
+++ b/WebBTL/Views/Products/Index.cshtml
@@ -9,8 +9,8 @@
 
     <div class="container-fluid bgtop2 ">
         <nav class="navbar navbar-expand-lg bg-warning  fixed-top">
-            <div class="container">
-                <a class="navbar-brand " href="#">Offcanvas navbar</a>
+            <div class="container ">
+                <a class="navbar-brand " href="#"><img src="~/Content/images/logo.png" alt="Alternate Text" style="width:100; max-width:100px;"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,7 +49,7 @@
     </div>
 } 
 
-<section class="mt-xxl-5">
+<section  style="margin-top:150px">
 
     <div class="container">
         <div class="row">
