--- a/WebBTL/Views/Home/Index.cshtml
+++ b/WebBTL/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
         @* navbar new *@
         <nav class="navbar navbar-expand-lg bg-warning  fixed-top">
             <div class="container">
-                <a class="navbar-brand " href="#">Offcanvas navbar</a>
+                <a class="navbar-brand " href="#"><img src="~/Content/images/logo.png" alt="Alternate Text" style="width:100; max-width:100px;" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -102,7 +102,7 @@
 
     <!-- slide banner -->
 
-    <section>
+    <section style="margin-top:48px">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
