--- a/WebBTL/Views/Products/Index.cshtml
+++ b/WebBTL/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
                     <div class="offcanvas-body  bg-warning">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/Home/Index">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About</a>
