--- a/WebBTL/Areas/Admin/Views/Roles/Index.cshtml
+++ b/WebBTL/Areas/Admin/Views/Roles/Index.cshtml
@@ -8,12 +8,12 @@
 <div class="container">
     <h2>Quản lý quyền truy cập</h2>
     <br />
-    <p>
+    <div class="d-flex justify-content-end">
         @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
 
-    </p>
+    </div>
 
-  
+    <br />
     <table class="table ">
         <tr>
             <th>
