--- a/WebBTL/Areas/Admin/Views/AdminAccounts/Index.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminAccounts/Index.cshtml
@@ -8,22 +8,20 @@
 <div class="container">
     <h2>Accounts</h2>
 
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <form method="post" class="row">
+    <div class="d-flex justify-content-end">
+        @Html.ActionLink("Create New", "Create",null, new {@class = "btn btn-primary"})
+    </div>
+    <br />
+    <form method="get" class="row">
         <div class="form-group mr-3">
-
             @Html.DropDownList("RoleId", (SelectList)ViewData["QuyenTruyCap"], "Chọn quyền truy cập", new { @class = "custom-select", @style = "min-width: 180px; max-width: 30%", id = "RoleId" })
-
         </div>
+        
         <div class="form-group">
-
-            @Html.DropDownList("TrangThai", (IEnumerable<SelectListItem>)ViewData["IsTrangThai"], "Chọn trạng thái", new { @class = "custom-select", @style = "min-width: 180px; max-width: 30%", id = "trangThai" })
-
+            <button type="submit" class="btn btn-primary">Lọc</button>
         </div>
     </form>
-   
+
 
 
     <table class="table">
