--- a/WebBTL/Areas/Admin/Views/AdminProducts/Details.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminProducts/Details.cshtml
@@ -4,168 +4,206 @@
     ViewBag.Title = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
+    <h2>Details</h2>
 
-<h2>Details</h2>
+    <div>
+        <h4>Product</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.ProductName)
+                </dt>
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.ProductName)
+                </dd>
+            </div>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.ShortDesc)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.ShortDesc)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShortDesc)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Description)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ShortDesc)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Price)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Discount)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Discount)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Discount)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Thumb)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Discount)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Thumb)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Thumb)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Video)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Thumb)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Video)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Video)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.DateCreated)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Video)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.DateCreated)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Datemodified)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Datemodified)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Datemodified)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.BestSellers)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Datemodified)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.BestSellers)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BestSellers)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.HomeFlag)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BestSellers)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.HomeFlag)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.HomeFlag)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Active)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.HomeFlag)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Active)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Tags)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Tags)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tags)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Titles)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tags)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Titles)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Titles)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Alias)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Titles)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Alias)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Alias)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.MetaDesc)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Alias)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.MetaDesc)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MetaDesc)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.MetaKey)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MetaDesc)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.MetaKey)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MetaKey)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.UnitsInStock)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MetaKey)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.UnitsInStock)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UnitsInStock)
-        </dt>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Category.CatName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.UnitsInStock)
-        </dd>
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Category.CatName)
+                </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.CatName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.CatName)
-        </dd>
-
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ProductID }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProductID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
